--- a/lib/styles/style.css
+++ b/lib/styles/style.css
@@ -737,7 +737,54 @@ a.bttn-dark:focus {
 }
 
 .pr_pic {
+  -webkit-transition: all .4s ease-in;
+  -moz-transition: all .4s ease-in;
+  -o-transition: all .4s ease-in;
+  -ms-transition: all .4s ease-in;
+  transition: all .4s ease-in;
   grid-area: pr_pic;
+  pointer-events: all;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+}
+.pr_pic:hover{
+}
+.pr_pic:hover .img_sample_text {
+  left: 30%;
+  opacity: 1;
+}
+
+.img_sample_text {
+  -webkit-transition: all .4s ease-in;
+  -moz-transition: all .4s ease-in;
+  -o-transition: all .4s ease-in;
+  -ms-transition: all .4s ease-in;
+  transition: all .4s ease-in;
+  color: #CB617B;
+  /* background: rgba(0,0,0,0.4); */
+  /* background: radial-gradient(rgba(0, 0, 0,  0.9), rgba(0, 0, 0,  0.8), rgba(0, 0, 0,  0.7), rgba(0, 0, 0,  0.6), rgba(0, 0, 0,  0.5), rgba(0, 0, 0,  0.4), rgba(0, 0, 0,  0.3), rgba(0, 0, 0,  0.2), rgba(0, 0, 0,  0.1), rgba(0, 0, 0,  0), rgba(0, 0, 0,  0), rgba(0, 0, 0,  0), rgba(0, 0, 0,  0), rgba(0, 0, 0,  0), rgba(0, 0, 0,  0), rgba(0, 0, 0,  0)); */
+      background: -webkit-linear-gradient(top, rgba(47,53,66,0) 0%, rgba(47,53,66,0.6) 40%, rgba(47,53,66,0.8) 75%);
+    background: linear-gradient(to right, rgba(47,53,66,0) 0%, rgba(47,53,66,0.6) 40%, rgba(47,53,66,0.8) 75%);
+  /* background: rgba(203,97,123,0.2); */
+  /* background: rgba(47,53,66,0.5); */
+  position: absolute;
+  top: 0;
+  left: 100%;
+  right: 0;
+  bottom: 0;
+  opacity: 0;
+  display: flex;
+  align-items: center;
+  padding: 0 50px;
+justify-content: center;
+font-family: "Roboto";
+font-size: 3.5rem;
+line-height: 1.5em;
+text-align: center;
+font-weight: bold;
+
+  /* filter: invert(100); */
 }
 
 .pr_pic img {
@@ -829,6 +876,7 @@ a.bttn-dark:focus {
   font-weight: bolder;
   height: min-content;
   align-self: center;
+  z-index: 2;
 }
 
 .pr_techn {
