--- a/lib/styles/style.css
+++ b/lib/styles/style.css
@@ -278,6 +278,90 @@ body {
   background: rgba(255, 255, 255, 0.7);
 }
 
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+@keyframes ldio {
+  0% {
+    transform: scale(2)
+  }
+
+  100% {
+    transform: scale(1)
+  }
+}
+
+.ldio div {
+  position: absolute;
+  width: 17px;
+  height: 17px;
+  top: 22px;
+  left: 22px;
+  background: #5cd3ad;
+  animation: ldio 1s cubic-bezier(.17,.67,.83,.67) infinite;
+  animation-delay: -0.3s;
+  /* animation-play-state: inherit; */
+  /* animation-play-state: inherit; */
+}
+
+.ldio div:nth-child(2) {
+  top: 22px;
+  left: 61px;
+  background: #f5c156;
+  animation-delay: -0.2s;
+  /* animation-play-state: inherit; */
+}
+
+.ldio div:nth-child(3) {
+  top: 61px;
+  left: 22px;
+  background: #c678dd;
+  animation-delay: 0s;
+  /* animation-play-state: inherit; */
+}
+
+.ldio div:nth-child(4) {
+  top: 61px;
+  left: 61px;
+  background: #e6616b;
+  animation-delay: -0.1s;
+  /* animation-play-state: inherit; */
+}
+
+.loadingio-spinner-cube {
+  width: 74px;
+  height: 74px;
+  display: inline-block;
+  overflow: hidden;
+  background: none;
+  position: fixed;
+  z-index: 10;
+  /* bottom: 3rem; */
+  /* right: 3rem; */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  /* opacity: 0; */
+}
+
+.ldio {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transform: translateZ(0) scale(0.74);
+  backface-visibility: hidden;
+  transform-origin: 0 0;
+  /* see note above */
+  /* animation-play-state: paused; */
+}
+
+.ldio div {
+  box-sizing: content-box;
+}
+
 /***
  *      __
  *     /_ |
@@ -294,8 +378,20 @@ body {
 
 /* Canvas */
 .canvas {
+  position: absolute;
+  /* height: 100vh; */
   height: 100vh;
-  width: 100vw;
+  /* height: 400%; */
+  width: 25vw;
+  /* width: 100vw; */
+  top: 0 !important;
+  /* top: 50% !important; */
+  /* left: 25% !important; */
+  /* bottom:0 !important; */
+  /* transform-origin: center; */
+  transform:   scale(4,4);
+  opacity: 0;
+  /* z-index: 3; */
 }
 
 .section1__container {
@@ -480,7 +576,11 @@ a.bttn-dark:focus {
  *
  */
 .section2 {
-  background: linear-gradient(135deg, #2f3542, #2f3542);
+  /* background: linear-gradient(135deg, #2f3542, #2f3542); */
+  z-index: 4;
+  overflow: hidden;
+  pointer-events: none;
+
 }
 
 .section2:before {
@@ -611,7 +711,10 @@ a.bttn-dark:focus {
  *
  */
 .section3 {
-  background: linear-gradient(135deg, #2f3542, #2f3542);
+  /* background: linear-gradient(135deg, #2f3542, #2f3542); */
+  z-index: 4;
+  pointer-events: none;
+
 }
 
 .section3:before {
@@ -734,6 +837,7 @@ a.bttn-dark:focus {
     "pr_techn pr_pic pr_pic";
   grid-gap: 1.5rem;
   align-content: space-between;
+  pointer-events: all;
 }
 
 .pr_pic {
@@ -748,8 +852,9 @@ a.bttn-dark:focus {
   position: relative;
   z-index: 0;
 }
-.pr_pic:hover{
-}
+
+.pr_pic:hover {}
+
 .pr_pic:hover .img_sample_text {
   left: 30%;
   opacity: 1;
@@ -764,8 +869,8 @@ a.bttn-dark:focus {
   color: #CB617B;
   /* background: rgba(0,0,0,0.4); */
   /* background: radial-gradient(rgba(0, 0, 0,  0.9), rgba(0, 0, 0,  0.8), rgba(0, 0, 0,  0.7), rgba(0, 0, 0,  0.6), rgba(0, 0, 0,  0.5), rgba(0, 0, 0,  0.4), rgba(0, 0, 0,  0.3), rgba(0, 0, 0,  0.2), rgba(0, 0, 0,  0.1), rgba(0, 0, 0,  0), rgba(0, 0, 0,  0), rgba(0, 0, 0,  0), rgba(0, 0, 0,  0), rgba(0, 0, 0,  0), rgba(0, 0, 0,  0), rgba(0, 0, 0,  0)); */
-      background: -webkit-linear-gradient(top, rgba(47,53,66,0) 0%, rgba(47,53,66,0.6) 40%, rgba(47,53,66,0.8) 75%);
-    background: linear-gradient(to right, rgba(47,53,66,0) 0%, rgba(47,53,66,0.6) 40%, rgba(47,53,66,0.8) 75%);
+  background: -webkit-linear-gradient(top, rgba(47, 53, 66, 0) 0%, rgba(47, 53, 66, 0.6) 40%, rgba(47, 53, 66, 0.8) 75%);
+  background: linear-gradient(to right, rgba(47, 53, 66, 0) 0%, rgba(47, 53, 66, 0.6) 40%, rgba(47, 53, 66, 0.8) 75%);
   /* background: rgba(203,97,123,0.2); */
   /* background: rgba(47,53,66,0.5); */
   position: absolute;
@@ -777,13 +882,12 @@ a.bttn-dark:focus {
   display: flex;
   align-items: center;
   padding: 0 50px;
-justify-content: center;
-font-family: "Roboto";
-font-size: 3.5rem;
-line-height: 1.5em;
-text-align: center;
-font-weight: bold;
-
+  justify-content: center;
+  font-family: "Roboto";
+  font-size: 3.5rem;
+  line-height: 1.5em;
+  text-align: center;
+  font-weight: bold;
   /* filter: invert(100); */
 }
 
@@ -914,7 +1018,10 @@ font-weight: bold;
 
 /* SECTION 4!!!!!!!!!!!!!!!! */
 .section4 {
-  background: linear-gradient(135deg, #2f3542, #2f3542);
+  /* background: linear-gradient(135deg, #2f3542, #2f3542); */
+  z-index: 3;
+  pointer-events: none;
+
 }
 
 .section4:before {
@@ -974,6 +1081,8 @@ font-weight: bold;
   grid-area: section4_main;
   max-width: 80vw;
   z-index: 5;
+  /* pointer-events: none; */
+
 }
 
 #contact_form {
@@ -996,6 +1105,7 @@ font-weight: bold;
     0 4px 4px rgba(47, 53, 66, 0.15),
     0 8px 8px rgba(47, 53, 66, 0.10),
     0 16px 16px rgba(47, 53, 66, 0.05);
+    pointer-events: all;
 }
 
 #contact_form div label {}
