--- a/lib/styles/style.css
+++ b/lib/styles/style.css
@@ -224,12 +224,13 @@ body {
 .side_container a svg {
   width: 27px;
   height: 27px;
-  transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
+  transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0.2s;
   pointer-events: all;
 }
 
 .side_container a svg:hover {
   transform: translateY(-5px);
+  transition-delay: 0s;
 }
 
 #github_placeholder {
@@ -288,55 +289,78 @@ body {
 .controls_container {
   position: fixed;
   display: grid;
-  background: red;
+  /* background: red; */
   right: 0;
-  top: 0;
+  top: 50.75px;
   /* height: 40vh; */
   width: 10rem;
   /* top: 0; */
   /* right: 0; */
   bottom: 0;
+  grid-row-gap: 3rem;
   /* grid-template-rows: auto auto auto; */
   grid-template-areas:
     "speed_controls"
     "plane_controls"
     "center_controls";
-  align-items: center;
+  /* align-items: start; */
   /* justify-items: center; */
-  /* align-content: center; */
+  align-content: start;
+
   /* justify-content: center; */
   z-index: 5;
   /* cursor: pointer; */
-  pointer-events: none;
+  /* pointer-events: none; */
+}
+
+.controls_container > div{
+  background: rgba(255, 255, 255, 0.5);
+  padding: 5px;
+  border-radius: 13px 2px;
+}
+.controls_container > div:hover{
+  background: rgba(255, 255, 255, 0.8);
+
 }
 
 .speed_controls {
   grid-area: speed_controls;
   fill: rgba(255, 255, 255, 0.7);
   display: grid;
+  grid-row-gap: 1rem;
   grid-template-areas:
     "speed_text speed_text"
     "speed_dec speed_inc";
   /* justify-content: space-between; */
   /* justify-content: center; */
-  justify-items: center;
+  /* justify-items: center; */
+  justify-items: start;
   background: grey;
 }
 
-.speed_text {
-  grid-area: speed_text;
-  display: flex;
-  align-items: center;
-  /* width: 100%; */
-  /* justify-content: center; */
-  font-size: 2rem;
-  font-weight: bold;
-  /* height: min-content; */
+.speed_controls div svg{
+  cursor: pointer;
+  pointer-events: all;
 }
+
+.speed_title{
+  grid-area: speed_text;
+  /* text-align: center; */
+  text-align: center;
+  font-family: "Roboto";
+  font-weight: bold;
+  color: rgba(255, 255, 255, 0.7);
+  font-size: 1.6rem;
+  line-height: 1.5em;
+}
+
+#speed_degree{
+}
+
+
 
 .decrease_speed {
   grid-area: speed_dec;
-  pointer-events: all;
 }
 
 .decrease_speed svg:hover {
@@ -345,11 +369,26 @@ body {
 
 .increase_speed {
   grid-area: speed_inc;
-  pointer-events: all;
 }
 
 .increase_speed svg:hover {
   fill: #5cd3ad;
+}
+
+#speed_degree{
+  grid-area: speed_degree;
+  font-family: "Roboto";
+  font-weight: bold;
+  color: rgba(255, 255, 255, 0.7);
+  font-size: 1.6rem;
+}
+
+.dec_color{
+  color: #e6616b;
+}
+
+.inc_color{
+  color: #5cd3ad;
 }
 
 .plane_controls {
@@ -357,38 +396,68 @@ body {
   background: blue;
   fill: rgba(255, 255, 255, 0.7);
   display: grid;
+  grid-row-gap: 0.5rem;
   grid-template-areas:
-    "plane_text"
-    "xy_plane"
-    "yz_plane"
-    "xz_plane";
+    "plane_title plane_title"
+    "xy_plane xy_icon"
+    "yz_plane yz_icon"
+    "xz_plane xz_icon";
   /* justify-content: space-between; */
   /* justify-content: center; */
-  justify-items: center;
+  align-items: end;
+  justify-items: start;
 }
 
-.plane_text {
-  grid-area: plane_text;
-  display: flex;
-  align-items: center;
-  /* width: 100%; */
-  /* justify-content: center; */
-  font-size: 2rem;
+.plane_title {
+  grid-area: plane_title;
+  text-align: center;
+  font-family: "Roboto";
   font-weight: bold;
-  /* height: min-content; */
+  color: rgba(255, 255, 255, 0.7);
+  font-size: 1.6rem;
+  line-height: 1.5em;
+  margin-bottom: .5rem;
 }
 
-.xy_plane {
+.plane_controls span{
+  font-family: "Roboto";
+  font-weight: bolder;
+  color: rgba(255, 255, 255, 0.7);
+  font-size: 1.5rem;
+  line-height: 1.5em;
+}
+
+.plane_controls svg, .plane_controls span{
+  cursor: pointer;
+  pointer-events: all;
+}
+
+.plane_controls svg:hover{
+  fill: #f5c156;
+}
+
+.xy_text {
   grid-area: xy_plane;
-  display: flex;
 }
 
-.yz_plane {
+.yz_text {
   grid-area: yz_plane;
 }
 
-.xz_plane {
+.xz_text {
   grid-area: xz_plane;
+}
+
+.xy_icon {
+  grid-area: xy_icon;
+}
+
+.yz_icon {
+  grid-area: yz_icon;
+}
+
+.xz_icon {
+  grid-area: xz_icon;
 }
 
 /*  */
