--- a/lib/v2/stylesheet.css
+++ b/lib/v2/stylesheet.css
@@ -65,7 +65,8 @@ h2 {
 .swiper-container {
     /* width: 600px; */
     /* height: 300px; */
-    /* height: 100%; */
+    height: 100%;
+    width: 100%;
 }
 
 .swiper-pagination{
@@ -285,9 +286,19 @@ grid-template-rows: repeat(auto-fit, minmax(40px, 1fr));
  *
  *
  */
+
+
 .section-2 {
   background: green;
 }
+
+.section2__container{
+  margin-left: 140px;
+  margin-right: 140px;
+}
+
+
+
 
 .section-3 {
   background: rgba(0, 0, 0, 0.5);
