--- a/lib/v2/stylesheet.css
+++ b/lib/v2/stylesheet.css
@@ -9,6 +9,7 @@
  */
 :root {
   --background-def: #2F3542;
+  --background-def-rgb: 47, 53, 66;
   --background-radial: radial-gradient(#4C556A, #3D4556, #2F3542);
   --background-radial-soft: radial-gradient(#3D4556, #2F3542);
   --green: #5CD3AD;
@@ -32,7 +33,9 @@
 html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  height: 100%;
+  /* min-height: 100%; */
+  /* height: auto !important; */
+  height: auto !important;
 }
 
 body {
@@ -42,7 +45,11 @@ body {
   font-size: var(--h1-font-size);
   line-height: 1.5;
   font-weight: 400;
-  margin: 0
+  margin: 0;
+  /* background: var(--background-def); */
+  /* z-index: -10; */
+  /* height: 400%;
+  background: linear-gradient(to bottom, var(--green), var(--orange), var(--red), var(--purple)); */
 }
 
 h1 {
@@ -64,8 +71,61 @@ h1, h2 {
   transition: font-size .2s; */
 }
 
+.main-wrapper {
+  /* height: 100%; */
+  /* height: 100%; */
+  /* height: 400vh; */
+  /* background: linear-gradient(to bottom, var(--green), var(--orange), var(--red), var(--purple)); */
+}
+
+.full-bg-wrapper {
+  /* height: auto !important; */
+  /* position: relative; */
+  /* height: 100%; */
+  /* -webkit-mask-image: radial-gradient(farthest-corner at 80vw 80vh, black,rgba(0,0,0,0.5), rgba(0,0,0,0.3),rgba(0,0,0,0.2),rgba(0,0,0,0.15),rgba(0,0,0,0.1),rgba(0,0,0,0.05), transparent ); */
+  /* mask-image: radial-gradient(farthest-corner at 80vw 80vh, black, transparent 70%); */
+  /* z-index: -9; */
+  /* background: var(--background-def); */
+  /* background: linear-gradient(to bottom, var(--green), var(--orange), var(--red), var(--purple)); */
+  /* background: linear-gradient(to bottom, var(--green), var(--orange), var(--red), var(--purple)); */
+  /* height: 100%;
+  width: 100%;
+  position: relative; */
+}
+
 .j-fullpage {
-  height: 100vh;
+  /* height: 100%; */
+  position: relative;
+  background: linear-gradient(to bottom, var(--green), var(--orange), var(--red), var(--purple));
+  /* position: fixed; */
+  /* background: linear-gradient(to bottom, var(--green), var(--orange), var(--red), var(--purple)); */
+  /* background-size: 100%; */
+  /* background-repeat: no-repeat; */
+  /* z-index: -10; */
+  /* background: linear-gradient(to bottom, var(--green), var(--orange), var(--red), var(--purple)); */
+  /* -webkit-mask-image: radial-gradient(farthest-corner at 80vw 80vh, black,rgba(0,0,0,0.5), rgba(0,0,0,0.3),rgba(0,0,0,0.2),rgba(0,0,0,0.15),rgba(0,0,0,0.1),rgba(0,0,0,0.05), transparent ); */
+  /* z-index: 1000; */
+}
+.j-fullpage::after{
+  content: '';
+  position: absolute;
+  top: 0;
+  /* bottom: 0; */
+  /* right: 0; */
+  /* left: 0; */
+  width: 100%;
+  height: 100%;
+  /* background: red; */	z-index: -1;
+
+  background: radial-gradient(at 80vw 80vh, transparent, rgba(47, 53, 66, 0.1), rgba(47, 53, 66, 0.2),
+      rgba(47, 53, 66, 0.3),
+      rgba(47, 53, 66, 0.4),
+      rgba(47, 53, 66, 0.5),
+      rgba(47, 53, 66, 0.6),
+      rgba(47, 53, 66, 0.7),
+      rgba(47, 53, 66, 0.8),
+      rgba(47, 53, 66, 0.9), #2F3542 60%);
+
 }
 
 .section {
@@ -73,6 +133,7 @@ h1, h2 {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  position: relative;
   width: 100%;
   height: 100%;
   -webkit-box-orient: vertical;
@@ -91,10 +152,10 @@ h1, h2 {
   -webkit-align-items: stretch;
   -ms-flex-align: stretch;
   align-items: stretch;
-  background: var(--background-def);
+  /* background: var(--background-def); */
 }
 
-.section::before {
+/* .section::before {
   content: "";
   position: absolute;
   top: 0;
@@ -103,6 +164,8 @@ h1, h2 {
   right: 0;
   -webkit-mask-image: radial-gradient(farthest-corner at 80vw 80vh, black, transparent 70%);
   mask-image: radial-gradient(farthest-corner at 80vw 80vh, black, transparent 70%);
+  /* -webkit-mask-image: radial-gradient(farthest-corner at 80vw 80vh, rgba(0,0,0,1),rgba(0,0,0,0.8),rgba(0,0,0,0.7),rgba(0,0,0,0.6),rgba(0,0,0,0.5),rgba(0,0,0,0.4),rgba(0,0,0,0.3),rgba(0,0,0,0.2), transparent 70%);
+  mask-image: radial-gradient(farthest-corner at 80vw 80vh, black, transparent 70%); */
 }
 
 .section-content-wrapper {
@@ -124,15 +187,25 @@ h1, h2 {
   -ms-flex: 1;
   flex: 1;
   background-color: rgba(255, 255, 255, .08);
-  box-shadow: inset 0px -6px 5px -1px var(--background-def),       inset -6px 0px 5px -1px var(--background-def);
+  box-shadow: inset 0px -6px 5px -1px var(--background-def), inset -6px 0px 5px -1px var(--background-def);
   height: 100%;
   z-index: 1;
 }
 
 .section-title {
   margin-bottom: 20px;
-  /* color: var(--white-ish);
-    text-shadow: 1px 1px 1px var(--red),
+  /* box-shadow: 0 5px 5px -5px var(--background-def), - 6px 0px 5px -1px var(--background-def);
+  box-shadow: 0 10px 10px -10px var(--background-def),
+    -10px 0 10px -10px var(--background-def);
+  */
+  /* box-shadow: 0 6px 5px -1px var(--background-def),
+    -10px 0 5px -1px var(--background-def); */
+  /* text-shadow: 0 6px 5px -1px var(--background-def),
+    -10px 0 5px -1px var(--background-def);*/
+  color: var(--white-ish);
+  text-shadow: -2.5px -2px 1px var(--background-def);
+  /* -3px -2.5px 1px var(--background-def); */
+  /*  text-shadow: 1px 1px 1px var(--red),
         1px 2px 1px var(--red),
         1px 3px 1px var(--red),
         1px 4px 1px var(--red),
@@ -542,7 +615,7 @@ h1, h2 {
  *
  */
 #section-2:before {
-  background: linear-gradient(135deg, transparent, var(--orange));
+  background: linear-gradient(135deg, var(--background-def), var(--orange));
 }
 
 #section-3:before {
