--- a/lib/v2/stylesheet.css
+++ b/lib/v2/stylesheet.css
@@ -22,6 +22,10 @@
   --purple-rgb: 198, 120, 221;
   --white-ish: #E8E8E8;
   --h1-font-size: calc(15px + (30 - 15) * ((100vw - 478px) / (1600 - 300)));
+
+
+  /* Manipulated variables */
+  --overlay-position: 0px;
 }
 
 * {
@@ -34,10 +38,18 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   /* min-height: 100%; */
-  /* height: auto !important; */
   height: auto !important;
+  /* height: auto !important; */
+  /* scroll-behavior: smooth; */
+  /* IE and Edge */
+  /* -ms-overflow-style: none;  */
+  /* Firefox */
+  /* scrollbar-width: none; */
 }
 
+/* html::-webkit-scrollbar {
+  display: none;
+} */
 body {
   font-family: Roboto, sans-serif;
   /* color: #333; */
@@ -71,6 +83,36 @@ h1, h2 {
   transition: font-size .2s; */
 }
 
+#pts {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  z-index: 10;
+  /* -webkit-mask-image: radial-gradient(
+		farthest-corner at 80vw 80vh,
+		transparent,
+		black 40%
+	);
+  background: var(--background-def);
+  z-index: -2; */
+  /* background: radial-gradient(
+  at 80vw 80vh,
+  transparent,
+  rgba(47, 53, 66, 0.1),
+  rgba(47, 53, 66, 0.2),
+  rgba(47, 53, 66, 0.3),
+  rgba(47, 53, 66, 0.4),
+  rgba(47, 53, 66, 0.5),
+  rgba(47, 53, 66, 0.6),
+  rgba(47, 53, 66, 0.7),
+  rgba(47, 53, 66, 0.8),
+  rgba(47, 53, 66, 0.9),
+  #2f3542 60%
+); */
+  /* z-index: -5; */
+  /* background: linear-gradient(to bottom, var(--green), var(--orange), var(--red), var(--purple)); */
+}
+
 .main-wrapper {
   /* height: 100%; */
   /* height: 100%; */
@@ -79,6 +121,8 @@ h1, h2 {
 }
 
 .full-bg-wrapper {
+  z-index: -2;
+  /* pointer-events: none; */
   /* height: auto !important; */
   /* position: relative; */
   /* height: 100%; */
@@ -95,7 +139,12 @@ h1, h2 {
 
 .j-fullpage {
   /* height: 100%; */
-  position: relative;
+  /* position: relative; */
+  /* -webkit-mask-image: radial-gradient(
+		farthest-corner at 80vw 80vh,
+		transparent,
+		black 40%
+	); */
   background: linear-gradient(to bottom, var(--green), var(--orange), var(--red), var(--purple));
   /* position: fixed; */
   /* background: linear-gradient(to bottom, var(--green), var(--orange), var(--red), var(--purple)); */
@@ -104,19 +153,37 @@ h1, h2 {
   /* z-index: -10; */
   /* background: linear-gradient(to bottom, var(--green), var(--orange), var(--red), var(--purple)); */
   /* -webkit-mask-image: radial-gradient(farthest-corner at 80vw 80vh, black,rgba(0,0,0,0.5), rgba(0,0,0,0.3),rgba(0,0,0,0.2),rgba(0,0,0,0.15),rgba(0,0,0,0.1),rgba(0,0,0,0.05), transparent ); */
-  /* z-index: 1000; */
+  pointer-events: none;
+  /* z-index: -2; */
 }
-.j-fullpage::after{
-  content: '';
+
+/* .j-fullpage::before {
+	content: "";
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	width: 100%;
+	height: 100vh;
+	z-index: -1;
+  -webkit-mask-image: radial-gradient(
+		farthest-corner at 80vw 80vh,
+		farthest-corner at 80vw 80vh,
+		transparent,
+		black 40%
+	);
+	background: var(--background-def);
+} */
+/* .j-fullpage::after { */
+/* bottom: 0; */
+/* right: 0; */
+/* left: 0; */
+/* background: red; */
+/* content: '';
   position: absolute;
   top: 0;
-  /* bottom: 0; */
-  /* right: 0; */
-  /* left: 0; */
   width: 100%;
   height: 100%;
-  /* background: red; */	z-index: -1;
-
+  z-index: -2;
   background: radial-gradient(at 80vw 80vh, transparent, rgba(47, 53, 66, 0.1), rgba(47, 53, 66, 0.2),
       rgba(47, 53, 66, 0.3),
       rgba(47, 53, 66, 0.4),
@@ -125,9 +192,38 @@ h1, h2 {
       rgba(47, 53, 66, 0.7),
       rgba(47, 53, 66, 0.8),
       rgba(47, 53, 66, 0.9), #2F3542 60%);
+      pointer-events: none;
+
+} */
+#overlay {
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  /* -webkit-mask-image: radial-gradient(farthest-corner at 80vw 80vh,
+      transparent,
+      black 40%);
+  background: var(--background-def); */
+  transition: all 1200ms ease 0s;
+  transform: translate3d(0px, var(--overlay-position), 0px);
+  pointer-events: all;
 
 }
 
+/* #overlay::before {
+	content: "";
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	width: 100%;
+	height: 100vh;
+	z-index: -1;
+  -webkit-mask-image: radial-gradient(
+		farthest-corner at 80vw 80vh,
+		transparent,
+		black 40%
+	);
+	background: var(--background-def);
+} */
 .section {
   display: -webkit-box;
   display: -webkit-flex;
