--- a/lib/v2/stylesheet.css
+++ b/lib/v2/stylesheet.css
@@ -299,22 +299,30 @@ h1, h2 {
   /* text-shadow: 0 6px 5px -1px var(--background-def),
     -10px 0 5px -1px var(--background-def);*/
   color: var(--white-ish);
-  text-shadow: -2.5px -2px 1px var(--background-def);
+  /* text-shadow: -2.5px -2px 1px var(--background-def); */
   /* -3px -2.5px 1px var(--background-def); */
-  /*  text-shadow: 1px 1px 1px var(--red),
-        1px 2px 1px var(--red),
-        1px 3px 1px var(--red),
-        1px 4px 1px var(--red),
-        1px 5px 1px var(--red),
-        1px 6px 1px var(--red),
-        1px 7px 1px var(--red),
-        1px 8px 1px var(--red),
-        1px 9px 1px var(--red),
-        1px 10px 1px var(--red),
-    1px 18px 6px rgba(16,16,16,0.4),
-    1px 22px 10px rgba(16,16,16,0.2),
-    1px 25px 35px rgba(16,16,16,0.2),
-    1px 30px 60px rgba(16,16,16,0.4); */
+  text-shadow: 0 1px 0 hsl(174, 5%, 80%), 0 2px 0 hsl(174, 5%, 75%),
+  0 3px 0 hsl(174, 5%, 70%), 0 4px 0 hsl(174, 5%, 66%),
+  0 5px 0 hsl(174, 5%, 64%), 0 6px 0 hsl(174, 5%, 62%),
+  0 7px 0 hsl(174, 5%, 61%), 0 8px 0 hsl(174, 5%, 60%),
+  0 0 5px rgba(0, 0, 0, 0.05), 0 1px 3px rgba(0, 0, 0, 0.2),
+  0 3px 5px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.2),
+  0 10px 10px rgba(0, 0, 0, 0.2), 0 20px 20px rgba(0, 0, 0, 0.3);
+
+   /* text-shadow: 1px 1px 1px #919191,
+        1px 2px 1px #919191,
+        1px 3px 1px #919191,
+        1px 4px 1px #919191,
+        1px 5px 1px #919191; */
+        /* 1px 6px 1px #919191,
+        1px 7px 1px #919191,
+        1px 8px 1px #919191,
+        1px 9px 1px #919191; */
+        /* 1px 10px 1px #919191; */
+    /* 1px 18px 6px rgba(16,16,16,0.4); */
+    /* 1px 22px 10px rgba(16,16,16,0.2); */
+    /* 1px 25px 35px rgba(16,16,16,0.2); */
+    /* 1px 30px 60px rgba(16,16,16,0.4); */
   /* box-shadow: inset 0 0 20px #000, inset 0 0 20px #000, inset 0 0 20px #000; */
 }
 
